[package]
name = "internal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hudhook = { version = "0.6.0", path = "./external/hoodhook" }
imgui = "0.11.0"
tracing = "0.1.40"
windows = "0.52.0"

